# RigelEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENCE.txt  README.md
Engine/: CMakeLists.txt
Engine/Assets/: BuildAssets.py  CMakeLists.txt
Engine/Assets/Scenes/: ExampleScene.json
Engine/Assets/Shaders/: DefaultShader.frag  DefaultShader.vert  DefaultShader.vert.spv  DirLight.frag  DirLight.vert  ForwardPass.frag  GeometryPass.frag  GeometryPass.vert
Engine/Assets/Shaders/Include/: CommonStructs.glsl  PBR_Utils.glsl
Engine/Include/: Core.hpp  Engine.hpp  ProjectSettings.hpp  RigelEngine.hpp  RigelHandle.hpp  RigelObject.hpp
Engine/Include/Assets/: Material.hpp  Model.hpp  RigelAsset.hpp  Shader.hpp  Texture.hpp  Texture2D.hpp
Engine/Include/Assets/Metadata/: AssetMetadata.hpp  MaterialMetadata.hpp  ShaderMetadata.hpp  TextureMetadata.hpp
Engine/Include/Components/: Camera.hpp  DirectionalLight.hpp  ModelRenderer.hpp  PointLight.hpp  SpotLight.hpp  Transform.hpp
Engine/Include/Debug/: Debug.hpp  ErrorCodes.hpp  Exceptions.hpp  Logger.hpp  Stopwatch.hpp
Engine/Include/ECS/: Component.hpp  ComponentHandle.hpp  ComponentTypeRegistry.hpp  ECS_ObjectState.hpp  GOHandle.hpp  GameObject.hpp  RigelHandle.hpp  RigelObject.hpp  Scene.hpp  SceneHandle.hpp
Engine/Include/ECS/Components/: Transform.hpp
Engine/Include/EngineTools/: Debug.hpp  Input.hpp  Time.hpp
Engine/Include/Handles/: AssetHandle.hpp  ComponentHandle.hpp  GOHandle.hpp  HandleValidator.hpp  RigelHandle.hpp  SceneHandle.hpp
Engine/Include/Subsystems/: AssetManager.hpp  InputManager.hpp  Renderer.hpp  RigelSubsystem.hpp  SceneManager.hpp  SubsystemGetters.hpp  Time.hpp  WindowManager.hpp
Engine/Include/Subsystems/AssetManager/: Asset.hpp  AssetDeleter.hpp  AssetHandle.hpp  AssetManager.hpp  AssetMetadata.hpp  AssetRegistryEntry.hpp  BuiltInAssets.hpp  RigelAsset.hpp
Engine/Include/Subsystems/EventSystem/: EngineEvents.hpp  Event.hpp  EventManager.hpp  IEventListener.hpp
Engine/Include/Subsystems/InputManager/: Input.hpp  InputManager.hpp  KeysAndButtons.hpp
Engine/Include/Subsystems/PhysicsEngine/: PhysicsEngine.hpp
Engine/Include/Subsystems/Renderer/: Material.hpp  Model.hpp  RenderScene.hpp  Renderer.hpp  SceneRenderInfo.hpp  Shader.hpp  Texture.hpp
Engine/Include/Subsystems/WindowManager/: CursorState.hpp  DisplayMode.hpp  ScreenMode.hpp  WindowManager.hpp
Engine/Include/Utilities/: Ref.hpp  Result.hpp  Types.hpp
Engine/Include/Utilities/Filesystem/: Directory.hpp  File.hpp
Engine/Include/Utilities/Math/: Math.hpp  Random.hpp
Engine/Include/Utilities/PCH/: RGE_PCH.hpp  STD_PCH.hpp
Engine/Include/Utilities/Reflection/: ITypeRegistrable.hpp
Engine/Include/Utilities/Serialization/: ISerializable.hpp  Serializer.hpp
Engine/Include/Utilities/Threading/: SleepUtility.hpp  ThreadPool.hpp
Engine/Include/Utils/: Hash.hpp  KeysAndButtons.hpp  Logger.hpp  RGE_PCH.hpp  Ref.hpp  Result.hpp  ScopeGuard.hpp  Stopwatch.hpp  Types.hpp
Engine/Include/Utils/Filesystem/: Directory.hpp  File.hpp
Engine/Include/Utils/HeaderUtils/: HeaderUtils.hpp  Internal.hpp  Types.hpp
Engine/Include/Utils/Math/: Hash.hpp  Math.hpp
Engine/Include/Utils/PCH/: RGE_PCH.hpp  STD_PCH.hpp
Engine/Include/Utils/Reflection/: TypeRegistry.hpp  TypeUtility.hpp
Engine/Include/Utils/Serialization/: GLM_Serializer.hpp  ISerializable.hpp  Serializer.hpp
Engine/Include/Utils/Threading/: SleepUtility.hpp  ThreadPool.hpp
Engine/Source/: Engine.cpp
Engine/Source/Assets/: Material.cpp  Model.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp
Engine/Source/Backend/: Editor.cpp  Editor.hpp  InternalEvents.hpp  Logger.cpp  Logger.hpp
Engine/Source/Backend/Logger/: Logger.cpp  Logger.hpp
Engine/Source/Backend/Renderer/: BackendModel.hpp  BackendShader.hpp  IImGuiBackend.hpp  IModelBackend.hpp  IRendererBackend.hpp  IShaderBackend.hpp  ITextureBackend.hpp  RenderingBackend.hpp  ShaderStage.hpp  ShaderStructs.hpp
Engine/Source/Components/: Camera.cpp  ModelRenderer.cpp  Transform.cpp
Engine/Source/Debug/: Debug.cpp  Exceptions.cpp  Logger.cpp
Engine/Source/ECS/: Component.cpp  ComponentHandle.cpp  ComponentTypeRegistry.cpp  GOHandle.cpp  GameObject.cpp  RigelObject.cpp  Scene.cpp  SceneHandle.cpp
Engine/Source/ECS/Components/: Transform.cpp
Engine/Source/EngineTools/: Debug.cpp  Input.cpp  Time.cpp
Engine/Source/Handles/: AssetHandle.cpp  ComponentHandle.cpp  GOHandle.cpp  HandleValidator.cpp  SceneHandle.cpp
Engine/Source/Subsystems/: AssetManager.cpp  Input.cpp  InputManager.cpp  Renderer.cpp  SceneManager.cpp  SubsystemGetters.cpp  Time.cpp  WindowManager.cpp
Engine/Source/Subsystems/AssetManager/: AssetDeleter.cpp  AssetHandle.cpp  AssetManager.cpp
Engine/Source/Subsystems/EventSystem/: EventManager.cpp
Engine/Source/Subsystems/InputManager/: Input.cpp  InputManager.cpp
Engine/Source/Subsystems/PhysicsEngine/: PhysicsEngine.cpp
Engine/glfw/: cmake_uninstall.cmake
Engine/glfw/src/: glfw3.pc
Runtime/: CMakeLists.txt
Runtime/Include/: Core.hpp  Engine.hpp  RigelEngine.hpp
Runtime/Include/Core/: Component.hpp  Core.hpp  Destroy.hpp  Time.hpp
Runtime/Include/ECS/: Component.hpp  GameObject.hpp  RigelHandle.hpp  RigelObject.hpp  Scene.hpp
Runtime/Include/EngineTools/: Time.hpp
Runtime/Include/Renderer/: Renderer.hpp
Runtime/Include/Subsystems/: RigelSubsystem.hpp  SceneManager.hpp  SubsystemBase.hpp
Runtime/Include/Utils/: Assert.hpp  HeaderUtils.hpp  Logger.hpp  PrimitiveTypes.hpp  RGE_API.hpp  RGE_PCH.hpp  STD_PCH.hpp  Stopwatch.hpp  Types.hpp
Runtime/Source/: Core.cpp  Engine.cpp  RigelEngine.cpp
Runtime/Source/Core/: Component.cpp  Core.cpp  Destroy.cpp  Instantiate.cpp  Time.cpp
Runtime/Source/ECS/: Component.cpp  GameObject.cpp  Scene.cpp
Runtime/Source/EngineTools/: Time.cpp
Runtime/Source/Subsystems/: SceneManager.cpp
Runtime/Source/Utils/: InternalUtils.hpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Scenes/: SampleScene.rigelscene
Sandbox/Source/: FreeCamController.cpp  FreeCamController.hpp  TestComponent.cpp  TestComponent.hpp  main.cpp
(+152 files in other folders)
